[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/OptionsMenu.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.75
anchor_bottom = 0.85
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Start" type="Button" parent="MainMenu"]
margin_top = 55.0
margin_right = 512.0
margin_bottom = 75.0
text = "Start"

[node name="Settings" type="Button" parent="MainMenu"]
margin_top = 95.0
margin_right = 512.0
margin_bottom = 115.0
text = "Settings"

[node name="Quit" type="Button" parent="MainMenu"]
margin_top = 135.0
margin_right = 512.0
margin_bottom = 155.0
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="MainMenu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_Quit_pressed"]
